Lo que no se subió

--- a/PortLog/MVCPortLog/Views/Login/Index.cshtml
+++ b/PortLog/MVCPortLog/Views/Login/Index.cshtml
@@ -14,7 +14,6 @@
         </tr>
     </table>
     <input type="submit" name="Login" value="Login">
-    <h2 class="MensajeError">@ViewBag.ErrMsg</h2>
+    <p class="MensajeError">@ViewBag.ErrMsg</p>
 </form>
-<p>@DateTime.Now.ToString("yyyy-dd-MM")</p>
 
